css/styles.css
/* All styles are currently tests and placeholders, not final */

/* Universal selectors ------------------------ */

* {
    box-sizing: border-box;
}

/* Global variable declarations ------------------ */

:root {
    /* Define the most commonly used colors on the page, so they 
     * can be changed en masse more easily */
    --base-text-color: rgba(255,255,255,0.5);
    --base-h1-color: #0c5698;
    --base-h2-color: rgba(255,255,255,0.5);
    --base-background-color: #0f4778;
    --content-background-color: #0c3961;
    --menu-text-color: #eb8a02;
    --menu-link-color: #eb8a02;
    --menu-background-color: #3e2000;
    --legal-color: #eb8a02;
    --form-background-color: #eb8a02;
    --form-accent-color: #eb8a02;
    --form-button-text-color: #adeaed;
    --form-submit-button-background-color: #031628;
    --form-delete-button-background-color: #3e2400;
    --member-text-color: rgba(0,0,0,0.5);
    --member-background-color: #eb8a02;
    --member-h3-color: #3e2400;
}
/* Tag selectors ---------------------- */

body {
    background-color: var(--base-background-color);
    font-family: 'Lato', Arimo, Helvetica, Arial, sans-serif;
    color: var(--base-text-color);
    font-size: 16px;
    margin: 0;
}

small {
    color: var(--legal-color);
}

p {
    text-align: justify;
}

/* Begin selectors for forms */

form {
    background-color: var(--form-background-color);
    border: 2px solid var(--form-accent-color);
    padding: 2em;
    width: 75%;
    margin: auto;
}

input[type='text'],
input[type='email'],
select {
    padding: 0.5em;
    margin-bottom: 1em;
    width: 100%
}

label {
    display: block;
    margin-bottom: 0.5em;
    text-align: right;
}

textarea {
    width: 100%;
    padding: 0.5em;
    margin-bottom: 1em;
}

button {
    box-shadow: 1px 1px 1px var(--form-accent-color);
    border-radius: 0;
    border: none;
    color: var(--form-button-text-color);
    background-color: var(--form-submit-button-background-color);
    padding: 0.5em 1em;
    margin: 0;
}

button:last-child {
    margin-top: 1em;
    background-color: var(--form-delete-button-background-color);
}

/* end forms */

h1, h2, h3 {
    font-family: 'Open Sans';
}

h1 {
    text-transform: uppercase;
    text-align: center;
    color: var(--base-h1-color);
}

h2 {
    color: var(--base-h2-color);
}

header {
    border-bottom: 2px dashed var(--menu-text-color);
}

footer {
    border-top: 2px dashed var(--menu-text-color);
}


/* Class selectors -------------------------------------- */

.non-content {
    width: 100%;
    text-align: center;
    margin: auto;
    background-color: var(--menu-background-color);
    color: var(--menu-text-color);
}

.non-content p {
    padding: 0;
    margin: 0;
}

.content {
    width: 80%;
    max-width: 800px;
    margin: auto;
    background-color: var(--content-background-color);
    padding: 1em;
}


.navbar ul {
    list-style-type: none;
    padding: 0; /*removes default 40px padding-left for <ul>*/
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: stretch;
    height: 400px;
    margin: 0;
}

.nav-item {
    margin: 0.5em;
    flex: 0 1em;
    display: flex;
}

.nav-item a {
    padding: 1em;
    text-decoration: none;
    color: var(--menu-link-color); /*override default link behavior*/
    width: 100%;
    height: 100%;
    font-family: 'Oswald';
    text-transform: uppercase;
}

.nav-item a:hover {
    text-decoration: underline;
}

.nav-item img {
    max-height: 3em;
}

.content img {
    float: left;
    padding: 1em;
    max-width: 50%;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
    /*The classic clearfix, to keep images from floating right out of 
    their containers*/
}

/* begin formatting for cast/show previews */

div.castContainer,
div.showContainer {
    display: flex;
    flex-direction: row;
    flex: 250px 1;
    flex-wrap: wrap;
    justify-content: space-around;
}

div.castMember,
div.show {
    display: inline-block;
    flex-direction: column;
    background-color: var(--member-background-color);
    color: var(--member-text-color);
    margin: 1em;
    padding: 1em;
    max-width: 25%;
    min-width: 175px;
}

.castMember h3,
.show h3 {
    color: var(--member-h3-color);
}

.castMember h3,
.castMember h4,
.castMember h5,
.castMember p, 
.show h3,
.show h4,
.show h5,
.show p {
    text-align: center;
    margin: 0.5em;
}

.castMember img,
.show img {
    max-width: 100%;
    min-width: 50px;
    padding: 1em;
    border-radius: 50px;
    margin: auto;
    object-fit: cover;
}

/* end cast/show previews */

/* Styles for desktop version of site ------------------- */
@media screen and (min-width: 769px) {
    .content {
        width: 70%;
    }

    .navbar ul {
        flex-direction: row;
        height: auto;
        justify-content: flex-end;
    }

    .nav-item {
        margin: 1em;
        /* flex: 1 2em; */
    }

    .nav-item a {
        padding: 0;
    }


    .nav-item:first-child {
        margin-top: 0;
        margin-bottom: 0;
        /* logo is intended to be height of entire header.  currently
        contains transparent pixels for the "whitespace" */
    }
    
    .nav-item:nth-child(2) {
        margin-left: auto;
        /* this looks a little wacky, it's just here to ensure that
        in horizontal nav bar layout, the 2nd child (the LI after 
        the logo image) pushes the logo to the left and starts the
        remainder of the nav bar on the right. */
    }

}

